force-app/main/default/objects/Outbound_Call_Result__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Intake_Period__c</fullName>
        <description>Used BY SR Outbound Call Team</description>
        <formula>Application_Course_Preference__r.Actual_Intake_Period__c</formula>
        <label>Actual Intake Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Detail__c</fullName>
        <label>Additional Detail</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admission_Category__c</fullName>
        <formula>Application_Course_Preference__r.Admission_Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admission Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Org_Unit_Code__c</fullName>
        <description>Formula field to get agent org unit code from application object</description>
        <formula>Application_Course_Preference__r.Application__r.Agent_Org_Unit_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agent Org Unit Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Course_Preference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Application Course Preference</label>
        <referenceTo>Application_Course_Preference__c</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Callback Requested</fullName>
                </value>
                <value>
                    <fullName>Enquiry Created</fullName>
                </value>
                <value>
                    <fullName>Follow-up Required</fullName>
                </value>
                <value>
                    <fullName>No Answer</fullName>
                </value>
                <value>
                    <fullName>No Follow-up Required</fullName>
                </value>
                <value>
                    <fullName>No - No Answer</fullName>
                </value>
                <value>
                    <fullName>No - Not Applicable</fullName>
                </value>
                <value>
                    <fullName>No - Not Available</fullName>
                </value>
                <value>
                    <fullName>No - Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Status__c</fullName>
        <label>Call Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Callback_On__c</fullName>
        <label>Callback On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Question__c</fullName>
        <description>Field to capture the OCR Comments</description>
        <label>Client Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Course_Name__c</fullName>
        <label>Competitor Course Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name_Other__c</fullName>
        <label>Competitor Name Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name Australia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ANU College</fullName>
                </value>
                <value>
                    <fullName>Australian Catholic University</fullName>
                </value>
                <value>
                    <fullName>Australian National University</fullName>
                </value>
                <value>
                    <fullName>Bond College</fullName>
                </value>
                <value>
                    <fullName>Bond University</fullName>
                </value>
                <value>
                    <fullName>Bradford College - University of Adelaide pathway</fullName>
                </value>
                <value>
                    <fullName>Canning College - Curtin University pathway</fullName>
                </value>
                <value>
                    <fullName>Carnegie Mellon University, Australia</fullName>
                </value>
                <value>
                    <fullName>Central Queensland University</fullName>
                </value>
                <value>
                    <fullName>Charles Darwin University</fullName>
                </value>
                <value>
                    <fullName>Charles Sturt University</fullName>
                </value>
                <value>
                    <fullName>Curtin University of Technology</fullName>
                    <label>Curtin University</label>
                </value>
                <value>
                    <fullName>Deakin College</fullName>
                </value>
                <value>
                    <fullName>Deakin University</fullName>
                </value>
                <value>
                    <fullName>Edith Cowan University</fullName>
                </value>
                <value>
                    <fullName>Eynesbury - University of Adelaide pathway</fullName>
                </value>
                <value>
                    <fullName>Federation University</fullName>
                </value>
                <value>
                    <fullName>Flinders University</fullName>
                </value>
                <value>
                    <fullName>Griffith College</fullName>
                </value>
                <value>
                    <fullName>Griffith University</fullName>
                </value>
                <value>
                    <fullName>Holmesglen TAFE</fullName>
                </value>
                <value>
                    <fullName>IES - University of Queensland pathway</fullName>
                </value>
                <value>
                    <fullName>Insearch - University of Technology Sydney pathway</fullName>
                </value>
                <value>
                    <fullName>James Cook University</fullName>
                </value>
                <value>
                    <fullName>La Trobe Pathway</fullName>
                </value>
                <value>
                    <fullName>La Trobe University</fullName>
                </value>
                <value>
                    <fullName>Macquarie University</fullName>
                </value>
                <value>
                    <fullName>Macquarie University International College</fullName>
                </value>
                <value>
                    <fullName>Murdoch University</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Reason__c</fullName>
        <label>Competitor Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Decision__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Prefers Course (Better Employment Outcomes)</fullName>
                    <label>Better Employment Outcomes</label>
                </value>
                <value>
                    <fullName>Better Ranked</fullName>
                </value>
                <value>
                    <fullName>Continue Studies From Previous Institution (More Familiar)</fullName>
                    <label>Continue Studies From Previous Institution</label>
                </value>
                <value>
                    <fullName>Could not meet condition</fullName>
                </value>
                <value>
                    <fullName>COVID-19</fullName>
                </value>
                <value>
                    <fullName>COVID 19 Uncertainty</fullName>
                </value>
                <value>
                    <fullName>COVID 19 Unsafe to Travel</fullName>
                </value>
                <value>
                    <fullName>COVID-19 Victoria</fullName>
                </value>
                <value>
                    <fullName>Decided To Complete Year 12 Studies First</fullName>
                </value>
                <value>
                    <fullName>Did Not Receive Monash First Course Preference</fullName>
                </value>
                <value>
                    <fullName>Doesn&apos;t meet Monash entry requirements</fullName>
                </value>
                <value>
                    <fullName>Easier/quicker application process</fullName>
                </value>
                <value>
                    <fullName>Entry Requirements Met For Direct Entry To University</fullName>
                </value>
                <value>
                    <fullName>Family / Friends Influence</fullName>
                </value>
                <value>
                    <fullName>Prefers Course (First Preference)</fullName>
                    <label>First Preference</label>
                </value>
                <value>
                    <fullName>Flexible study options</fullName>
                </value>
                <value>
                    <fullName>Prefers Course (Intake Commencement At More Suitable Time)</fullName>
                    <label>Intake Commencement At More Suitable Time</label>
                </value>
                <value>
                    <fullName>Living cost is lower</fullName>
                </value>
                <value>
                    <fullName>Prefers Course (Mid-Year Intake Available)</fullName>
                    <label>Mid-Year Intake Available</label>
                </value>
                <value>
                    <fullName>Monash Online</fullName>
                </value>
                <value>
                    <fullName>Prefers Course (More Credit Exemptions)</fullName>
                    <label>More Credit Exemptions</label>
                </value>
                <value>
                    <fullName>No intention To Study At Monash (Backup Plan)</fullName>
                </value>
                <value>
                    <fullName>Not Approved by Sponsor</fullName>
                </value>
                <value>
                    <fullName>Prefers Course (Offers Work Experience / Internships)</fullName>
                    <label>Offers Work Experience / Internships</label>
                </value>
                <value>
                    <fullName>Online study option</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Prefers Competitor (Perceived More Prestigious)</fullName>
                    <label>Perceived More Prestigious</label>
                </value>
                <value>
                    <fullName>Perception Fail Rate Is High At Monash</fullName>
                </value>
                <value>
                    <fullName>Preferred Course not offered at Monash</fullName>
                </value>
                <value>
                    <fullName>Preferred university / course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Campus__c</fullName>
        <formula>TEXT(Contact__r.Campus__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Campus</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Country_Of_Residence__c</fullName>
        <formula>TEXT(Contact__r.Country_of_Residence__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact - Country Of Residence</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Course_Code__c</fullName>
        <formula>Contact__r.Course_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Course_Name__c</fullName>
        <formula>Contact__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Faculty__c</fullName>
        <formula>TEXT(Contact__r.Faculty__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Home_Phone__c</fullName>
        <formula>Contact__r.HomePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mobile_Phone__c</fullName>
        <formula>Contact__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Mobile Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Other_Phone__c</fullName>
        <formula>Contact__r.OtherPhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Other Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_State__c</fullName>
        <description>Used by SR Team  for Outbound Call Campaigns</description>
        <formula>Contact__r.MailingState</formula>
        <label>Contact State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Admission_Status__c</fullName>
        <formula>IF(OR(RecordType.DeveloperName = &apos;Domestic_Post_App&apos;, RecordType.DeveloperName = &apos;International_Post_App&apos;), TEXT(Application_Course_Preference__r.Course_Admission_Status__c), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Admission Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Attempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Course Attempt</label>
        <referenceTo>Course_Attempt__c</referenceTo>
        <relationshipLabel>Outbound Calls</relationshipLabel>
        <relationshipName>Outbound_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <formula>Application_Course_Preference__r.Course__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <formula>Application_Course_Preference__r.Course__r.Course_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Location_of_Student__c</fullName>
        <description>Used by SR Team to track current location of Student</description>
        <label>Current Location of Student</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Onshore</fullName>
                </value>
                <value>
                    <fullName>Offshore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Time_Closed__c</fullName>
        <label>Date/Time Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Decision__c</fullName>
        <label>Decision</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Result__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted another Monash Course</fullName>
                </value>
                <value>
                    <fullName>Accepted Offer</fullName>
                </value>
                <value>
                    <fullName>Accept Offer / Enrol Online</fullName>
                </value>
                <value>
                    <fullName>Application Already Submitted</fullName>
                </value>
                <value>
                    <fullName>CoP</fullName>
                </value>
                <value>
                    <fullName>Declined Offer</fullName>
                </value>
                <value>
                    <fullName>Decline Offer</fullName>
                </value>
                <value>
                    <fullName>Decline Study Grant Offer</fullName>
                </value>
                <value>
                    <fullName>Defer Offer</fullName>
                </value>
                <value>
                    <fullName>Deferral Request Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Deferred Offer</fullName>
                </value>
                <value>
                    <fullName>Educ Agent Will Follow-Up</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Enrolled (New Student)</fullName>
                </value>
                <value>
                    <fullName>Extension Request of Study Grant</fullName>
                </value>
                <value>
                    <fullName>Firm Discontinue</fullName>
                </value>
                <value>
                    <fullName>Firm Intermission</fullName>
                </value>
                <value>
                    <fullName>Going Ok / Likely To Stay</fullName>
                </value>
                <value>
                    <fullName>November intake- will study online (from offshore)</fullName>
                </value>
                <value>
                    <fullName>November intake- will study online (from onshore)</fullName>
                </value>
                <value>
                    <fullName>Plans To Accept</fullName>
                </value>
                <value>
                    <fullName>Accept offer</fullName>
                    <label>Plans to Accept/Enrol</label>
                </value>
                <value>
                    <fullName>Plans To Continue</fullName>
                </value>
                <value>
                    <fullName>Plans To Enrol Online</fullName>
                    <label>Plans To Enrol</label>
                </value>
                <value>
                    <fullName>Refund Request Confirmed</fullName>
                </value>
                <value>
                    <fullName>Refund Request Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Refund Request Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Some Difficulties / Could Be At Risk</fullName>
                </value>
                <value>
                    <fullName>Still Deciding</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied / Likely To Leave</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deferral_Intake__c</fullName>
        <description>Used by SR Outbound Call</description>
        <label>Deferral Intake</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>T3 2024</fullName>
                </value>
                <value>
                    <fullName>Nov 2024</fullName>
                </value>
                <value>
                    <fullName>S1 2025</fullName>
                </value>
                <value>
                    <fullName>S2 2025</fullName>
                </value>
                <value>
                    <fullName>T1 2025</fullName>
                </value>
                <value>
                    <fullName>T2 2025</fullName>
                </value>
                <value>
                    <fullName>T3 2025</fullName>
                </value>
                <value>
                    <fullName>Nov 2025</fullName>
                </value>
                <value>
                    <fullName>S1 2026</fullName>
                </value>
                <value>
                    <fullName>S2 2026</fullName>
                </value>
                <value>
                    <fullName>T1 2026</fullName>
                </value>
                <value>
                    <fullName>T2 2026</fullName>
                </value>
                <value>
                    <fullName>T3 2026</fullName>
                </value>
                <value>
                    <fullName>Nov 2026</fullName>
                </value>
                <value>
                    <fullName>Nov 2020</fullName>
                    <isActive>false</isActive>
                    <label>Nov 2020</label>
                </value>
                <value>
                    <fullName>Nov 2023</fullName>
                    <isActive>false</isActive>
                    <label>Nov 2023</label>
                </value>
                <value>
                    <fullName>Oct 2021</fullName>
                    <isActive>false</isActive>
                    <label>Oct 2021</label>
                </value>
                <value>
                    <fullName>Oct 2022</fullName>
                    <isActive>false</isActive>
                    <label>Oct 2022</label>
                </value>
                <value>
                    <fullName>Oct 2023</fullName>
                    <isActive>false</isActive>
                    <label>Oct 2023</label>
                </value>
                <value>
                    <fullName>S 2 2025</fullName>
                    <isActive>false</isActive>
                    <label>S 2 2025</label>
                </value>
                <value>
                    <fullName>S1 2021</fullName>
                    <isActive>false</isActive>
                    <label>S1 2021</label>
                </value>
                <value>
                    <fullName>S1 2022</fullName>
                    <isActive>false</isActive>
                    <label>S1 2022</label>
                </value>
                <value>
                    <fullName>S1 2023</fullName>
                    <isActive>false</isActive>
                    <label>S1 2023</label>
                </value>
                <value>
                    <fullName>S1 2024</fullName>
                    <isActive>false</isActive>
                    <label>S1 2024</label>
                </value>
                <value>
                    <fullName>S2 2021</fullName>
                    <isActive>false</isActive>
                    <label>S2 2021</label>
                </value>
                <value>
                    <fullName>S2 2022</fullName>
                    <isActive>false</isActive>
                    <label>S2 2022</label>
                </value>
                <value>
                    <fullName>S2 2023</fullName>
                    <isActive>false</isActive>
                    <label>S2 2023</label>
                </value>
                <value>
                    <fullName>S2 2024</fullName>
                    <isActive>false</isActive>
                    <label>S2 2024</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Unrelated</fullName>
                </value>
                <value>
                    <fullName>Student Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Id__c</fullName>
        <description>Id of the event linked to the OCR</description>
        <label>Event Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Link_Status__c</fullName>
        <description>Identifies linking status of event created by Calendly</description>
        <label>Event Link Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Session Booked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <formula>Application_Course_Preference__r.Course__r.Faculty_Description__c</formula>
        <label>Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Unit_Enrolment_Date__c</fullName>
        <formula>Contact__r.Primary_Course_Attempt__r.First_Unit_Enrolment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Unit Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Key_Feedback__c</fullName>
        <label>Key Feedback</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Latest_Unit_Enrolment_Date__c</fullName>
        <description>Used By SR Outbound Call App</description>
        <formula>Contact__r.Primary_Course_Attempt__r.Latest_Unit_Enrolment_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latest Unit Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Acquisition_Source_Campaign__c</fullName>
        <description>Used By SR Outbound Call Team.</description>
        <formula>Case__r.Lead__r.Acquisition_Source__r.Name</formula>
        <label>Lead Acquisition Source Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Broad_area_s_of_interest__c</fullName>
        <complianceGroup>GDPR</complianceGroup>
        <description>Used bY SR Outbound Call Team.</description>
        <formula>IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c, &quot;Art, Design and Architecture&quot; ), &quot;Art, Design and Architecture;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Arts, Humanities and Social Sciences&quot; ), &quot;Arts, Humanities and Social Sciences;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Business&quot; ), &quot;Business;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Education&quot; ), &quot;Education;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Engineering&quot; ), &quot;Engineering;&quot;,null )&amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Information Technology&quot; ), &quot;Information Technology;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Law&quot; ), &quot;Law;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Medicine, Nursing and Health Sciences&quot; ), &quot;Medicine, Nursing and Health Sciences;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;None&quot; ), &quot;None;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Pharmacy and Pharmaceutical Sciences&quot; ), &quot;Pharmacy and Pharmaceutical Sciences;&quot;,null ) &amp;
IF ( INCLUDES ( Case__r.Lead__r.Broad_area_s_of_interest__c , &quot;Science&quot; ), &quot;Science;&quot;,null )</formula>
        <label>Lead - Broad area(s) of interest</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Created_Date__c</fullName>
        <formula>Case__r.Lead__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Desired_Start_Period__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Desired_Start_Period__c)</formula>
        <label>Lead - Desired Start Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Desired_Start_Year__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Desired_Start_Year__c)</formula>
        <label>Lead - Desired Start Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Funding_Plans__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Study_Funded_By__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Funding Plans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Grade__c</fullName>
        <formula>Case__r.Lead__r.Lead_Grade__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <formula>CASESAFEID(Case__r.Lead__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Nationality__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <description>Use by SR team for reporting.</description>
        <formula>TEXT(Contact__r.Nationality__c )</formula>
        <label>Lead - Nationality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Preferred_Country_Of_Study__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Preferred_Country_of_Study__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Preferred Country Of Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Primary_Course_Master_Code__c</fullName>
        <formula>Case__r.Lead__r.Primary_Course_Master_Associated__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Primary Course Master Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Primary_Course_Master_Title__c</fullName>
        <formula>Case__r.Lead__r.Primary_Course_Master_Associated__r.Latest_Active_Course_Version_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Primary Course Master Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Case__r.Lead__r.Static_Lead_Grade_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Student_Type__c</fullName>
        <formula>TEXT(Case__r.Lead__r.Student_type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead - Student Type</label>
        <type>Text</type>
    </fields>
</CustomObject>